<package format="3">
  <name>py_srvcli</name>
  <version>0.0.0</version>
  <description>Python-based service and client example for triangle area calculation</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Python specific -->
  <exec_depend>ament_python</exec_depend>

  <!-- Grouping the package -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Entry points for ROS2 to run the scripts -->
  <export>
    <build_type>ament_python</build_type>
    <python_build_depend>ament_python</python_build_depend>
  </export>
</package>
