<?xml version="1.0"?>
<package format="3">
  <name>shapes</name>
  <version>0.0.1</version>
  <description>ROS2 Shapes Drawing Package</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- Build bağımlılıkları -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Çalışma zamanı bağımlılıkları -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>ament_python</exec_depend>

  <!-- Paket gruplama -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
